common-applications/freesky-icsl-hk-cluster/mindspore-internship/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-internship
  name: mindspore-internship
